trustfall_core/src/resources/test_data/parse_errors/fold_and_output.parse-error.ron
Err(UnsupportedDirectivePosition("@output", "this directive cannot appear after a @fold directive", Pos(
  line: 4,
  column: 42,
)))
